# final

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md
ctrl/: Cargo.toml  README.md
ctrl/scripts/: analyze_results.sh  explore_sequences.sh  generate_summary_report.sh  quick_analysis.py  test_2move_systematic.sh  test_5move_sequences.sh  test_commutators.sh  test_single_moves.sh  test_theoretical_predictions.sh
ctrl/src/: main.rs  moves.rs  orbit.rs
disp/: AUTOMATE.sh  MANUAL_RECORDING_GUIDE.md  NIX_RECORDING_SETUP.md  QUICK_RECORD.md  QUICK_RECORD_OLD.md  README.md  RECORD.sh  RECORDING_GUIDE.md  RECORDING_PLAN.md  RECORDING_QUICK_START.md  RECORD_NOW.sh  VISUALIZATION_GUIDE.md  automate_sequences.py  check_window.sh  final_record.py  flake.nix  generate_hsc_logs.py  plot_all.m  plot_classification_pie.m  plot_lyapunov_vs_length.m  plot_period_vs_lambda.m  plot_top_sequences.m  pyproject.toml  record_sequences.py  recording_config.py  recording_config_CORRECTED.py  sequences_to_record.txt
docs/: ADDITIONAL_ANALYSES.md  EXPERIMENT_LOG.md  PERIOD_DISCOVERIES.md  SYSTEMATIC_EXPLORATION.md  SYSTEMATIC_RESULTS.md  mathematical_framework.md
obsv/: ANALYSIS_REPORT.md  README.md  analyze.py  generate_report.sh  main.py  pyproject.toml  show_recording_candidates.py
obsv/obsv/: __init__.py  ctrl_runner.py  extended_analysis.py  lyapunov.py  random_test.py
obsv/scripts/: collect_2move_heatmap.py  collect_self_compositions.py  generate_trajectory_data.py  reclassify_lyapunov.py  run_analysis.py  run_lyapunov.py  run_random_test.py
render/: Cargo.toml
render/src/: main.rs
report/: MATH_ENHANCEMENTS_SUMMARY.md  compile.sh  math_enhancements.md  presentation.tex  presentation_division.md  presentation_division_mathheavy.md  presentation_division_streamlined.md  presentation_notes.md  presentation_notes_person1.md  presentation_notes_person1_mathheavy.md  presentation_notes_person1_streamlined.md  (+3 more)
(+51 files in other folders)
