[project]
name = "obsv"
version = "0.1.0"
description = "Analysis and observation tools for 4D hypercube trajectory exploration"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
]

[project.scripts]
obsv-analyze = "analyze:analyze_results"
obsv-random = "random_test:main"
